--- a/10. Regular Expression Matching.md
+++ b/10. Regular Expression Matching.md
@@ -176,6 +176,6 @@ class Solution10 {
 Solution 1:
 Runtime: 69 ms, faster than 14.37% of Java online submissions for Regular Expression Matching.<br>
 Memory Usage: 45 MB, less than 5.02% of Java online submissions for Regular Expression Matching.
-Solution 2:
+Solution 2:<br>
 Runtime: 2 ms, faster than 97.10% of Java online submissions for Regular Expression Matching.<br>
 Memory Usage: 36 MB, less than 99.99% of Java online submissions for Regular Expression Matching.
