--- a/402. Remove K Digits.md
+++ b/402. Remove K Digits.md
@@ -5,7 +5,8 @@
 > Link: https://leetcode.com/problems/remove-k-digits/
 
 ```
-Given a non-negative integer num represented as a string, remove k digits from the number so that the new number is the smallest possible.
+Given a non-negative integer num represented as a string, remove k digits from the number so that the new number
+is the smallest possible.
 
 Note:
 
@@ -28,7 +29,7 @@ Input: num = "10", k = 2
 Output: "0"
 Explanation: Remove all the digits from the number and it is left with nothing which is 0.
 
-
+将num中移除k个数字，使得其得到的结果最小
 
 ```
 
@@ -36,6 +37,22 @@ Explanation: Remove all the digits from the number and it is left with nothing w
 ## Solution
 
 > Related Topics: Stack, Greedy
+
+要结果最小，首先应该保证其高位的值尽量减小，在保证高位值小的情况下，删除较大的数。
+
+考虑可以创造一个stack，每次遍历原数的所有数字，将数存入stack中。<br>
+由于stack是先进后出的数据结构，因此每次检查当前遍历的数字是否比栈顶元素小。<br>
+在这里栈顶元素是当前最大的数（也是目前的最低位元素），如果当前遍历的元素小于栈顶元素，则证明其可以替代原元素在目标中的位置。<br>
+将栈顶元素出栈，并将当前元素进栈。检查完所有元素后，检查结束。
+
+### 易错点
+这题的难点是许多特殊情况的考虑<br>
+1. 如果输入的k值大于或者等于原数的长度（即将所有数字都删除），此时按照原方法输出的为空。因此应在最开始讨论该情况，若有此情况，输出0
+2. 当检查结束后，可能栈内的元素个数超过了所需的k值（例如原数为非递增序列11111，此时所有元素进栈，但无元素出栈），因此需要保证k最后的被减为零，将多余元素出栈
+3. 当结果生成完成后，可能会有leading zero，如题中Example 2。此时应该检查输出字符串首位是否有0，如果有0则应该删除
+
+另外，构造方法时，while循环内嵌套的为while。即当当前检查的结果小于栈顶元素，使栈顶元素出栈后，还应继续检查当前的栈顶元素，是否可以将其继续出栈。（如12340, 删除4位，如果非while，则最后检查结果为1230，再至第二个循环删除3位，返回1）
+
 
 
 
@@ -47,9 +64,7 @@ class Solution {
         int n = num.length();
         Stack<Character> stack = new Stack<>();
         int i = 0;
-        
         if (k >= n) return "0";
-        
         
         while (i < n) {
             while (k > 0 && !stack.isEmpty() && num.charAt(i) < stack.peek()) {
