--- a/402. Remove K Digits.md
+++ b/402. Remove K Digits.md
@@ -5,8 +5,8 @@
 > Link: https://leetcode.com/problems/remove-k-digits/
 
 ```
-Given a non-negative integer num represented as a string, remove k digits from the number so that the new number
-is the smallest possible.
+Given a non-negative integer num represented as a string, remove k digits from the number so that the new 
+number is the smallest possible.
 
 Note:
 
@@ -22,7 +22,8 @@ Explanation: Remove the three digits 4, 3, and 2 to form the new number 1219 whi
 Example 2:
 Input: num = "10200", k = 1
 Output: "200"
-Explanation: Remove the leading 1 and the number is 200. Note that the output must not contain leading zeroes.
+Explanation: Remove the leading 1 and the number is 200. Note that the output must not contain leading 
+zeroes.
 
 Example 3:
 Input: num = "10", k = 2
