DP, DFS, * Trie

--- a/472. Concatenated Words.md
+++ b/472. Concatenated Words.md
@@ -32,14 +32,56 @@ The returned elements order does not matter.
 
 > Related Questions:  [LC 139. ](https://leetcode.com/problems/word-break/)[Word Break](https://github.com/Zingg7/LeetCode/blob/master/139.%20Word%20Break.md) / [LC 140. ](https://leetcode.com/problems/word-break-ii/)[Word Break II](https://github.com/Zingg7/LeetCode/blob/master/140.%20Word%20Break%20II.md)
 
+这题做的真的lay了，稍微少写一点点就会TLE。
+具体思路和Word Break差不多，在这里相当于对每个单词进行一次Word Break的查询查询操作。
+
+
+### 易错点
+1. 要考虑到输入空字符串的情况
+当空字符串存在于数组中时，对任意一个单词进行检查，空串即满足条件，会进入新的循环，新的循环中空串又为满足条件的解法，因此会进入无限循环中。因此必须在递归之前首先将空串剔除。
+
+2. 字典要设置为Set，设置为List会TLE
+Set的查询效率比List要高
 
 
 
 ## Code
 
 ```java
-
+class Solution {
+    public List<String> findAllConcatenatedWordsInADict(String[] words) {
+        List<String> res = new ArrayList<>();
+        Set<String> dict = new HashSet<>();
+        int minLen = Integer.MAX_VALUE;
+        
+        for (String word: words) {
+            if (word.length() > 0) {
+                dict.add(word);
+                minLen = Math.min(minLen, word.length());
+            }
+        }
+        
+        for (String word: words) {
+            if (wordBreak(word, dict, 0, minLen)) {
+                res.add(word);
+            }
+        }
+        return res;
+    }
+    
+    private boolean wordBreak(String word, Set<String> res, int start, int minLen) {
+        for (int i = start + minLen; i <= word.length() - minLen; i++) {
+            if (res.contains(word.substring(start, i)) && 
+               (res.contains(word.substring(i)) || wordBreak(word, res, i, minLen))) {
+                return true;
+            }
+        }
+        return false;
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 42 ms, faster than 91.89% of Java online submissions for Word Break.
+Memory Usage: 46.4 MB, less than 100.00% of Java online submissions for Word Break.
