DP, DFS, * Trie

--- a/472. Concatenated Words.md
+++ b/472. Concatenated Words.md
@@ -37,10 +37,11 @@ The returned elements order does not matter.
 
 
 ### 易错点
-1. 要考虑到输入空字符串的情况
-当空字符串存在于数组中时，对任意一个单词进行检查，空串即满足条件，会进入新的循环，新的循环中空串又为满足条件的解法，因此会进入无限循环中。因此必须在递归之前首先将空串剔除。
+1. 要考虑到输入空字符串的情况<br>
+当空字符串存在于数组中时，对任意一个单词进行检查，空串即满足条件，会进入新的循环，新的循环中空串又为满足条件的解法，因此会进入无限循环中。<br>
+必须在递归之前首先将空串剔除。
 
-2. 字典要设置为Set，设置为List会TLE
+2. 字典要设置为Set，设置为List会TLE<br>
 Set的查询效率比List要高
 
 
