DP, DFS, * Trie

--- a/472. Concatenated Words.md
+++ b/472. Concatenated Words.md
@@ -84,5 +84,5 @@ class Solution {
 
 
 ## Submission details
-Runtime: 42 ms, faster than 91.89% of Java online submissions for Word Break.
-Memory Usage: 46.4 MB, less than 100.00% of Java online submissions for Word Break.
+Runtime: 42 ms, faster than 91.89% of Java online submissions for Concatenated Words.<br>
+Memory Usage: 46.4 MB, less than 100.00% of Java online submissions for Concatenated Words.
