--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -76,7 +76,7 @@ DFS: <br>
 
 
 ## Code
-Solution1: 
+Solution 1: 
 ```java
 class Solution127_1{
    public int ladderLength(String beginWord, String endWord, List<String> wordList) {
@@ -110,7 +110,7 @@ class Solution127_1{
 }
 ```
 
-Solution2(神仙算法，看不懂T-T):
+Solution 2:
 ```java
 class Solution127_2 {
     public int ladderLength(String beginWord, String endWord, List<String> wordList) {
@@ -147,12 +147,50 @@ class Solution127_2 {
     }
 }
 ```
+Solution 3: 
+```
+class Solution {
+    public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+        Set<String> begin = new HashSet<>();
+        Set<String> end = new HashSet<>();
+        begin.add(beginWord);
+        end.add(endWord);
+        Set<String> dict = new HashSet<>(wordList);
+        if(!dict.contains(endWord)) return 0;
+        return helper(begin, end, dict, 1);
+    }
+    
+    private int helper(Set<String> begin, Set<String> end, Set<String> dict, int count) {
+        if (begin.isEmpty() || end.isEmpty()) return 0;
+        count ++;
+        dict.removeAll(begin);
+        Set<String> next = new HashSet<>();
+        for (String str : begin) {  // BFS
+            char[] newWordChar = str.toCharArray();
+            for (int i = 0; i < newWordChar.length; i++) {
+                char c = newWordChar[i];
+                for (char j = 'a'; j <= 'z'; j++) {
+                    newWordChar[i] = j;
+                    String newWord = String.valueOf(newWordChar);
+                    if (!dict.contains(newWord)) continue;
+                    if (end.contains(newWord)) return count;
+                    next.add(newWord);
+                }
+                newWordChar[i] = c;
+            }
+        }
+        begin = next; 
+        
+        return begin.size() > end.size() ? helper(end, begin, dict, count) : 
+                                            helper(begin, end, dict, count);
+    }
+}
+```
 
 ## Submission details
-Solution1:
+Solution 1:<br>
 Runtime: 80 ms, faster than 51.88% of Java online submissions for Word Ladder.<br>
-Memory Usage: 44.6 MB, less than 23.29% of Java online submissions for Word Ladder.
-
-Solution2:
+Memory Usage: 44.6 MB, less than 23.29% of Java online submissions for Word Ladder.<br>
+Solution 2,3:<br>
 Runtime: 13 ms, faster than 98.97% of Java online submissions for Word Ladder.<br>
 Memory Usage: 39.2 MB, less than 85.93% of Java online submissions for Word Ladder.
