--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -148,7 +148,7 @@ class Solution127_2 {
 }
 ```
 Solution 3: 
-```
+```java
 class Solution {
     public int ladderLength(String beginWord, String endWord, List<String> wordList) {
         Set<String> begin = new HashSet<>();
