--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -43,6 +43,8 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 
 > Related Topics: Breadth First Search
 
+> Related Questions: [LC 126. ](https://leetcode.com/problems/word-ladder-ii/)[Word Ladder II](https://github.com/Zingg7/LeetCode/blob/master/126.%20Word%20Ladder%20II.md)
+
 LC好像DFS比BFS多的多，我到现在也没做过几个BFS的题目，今天终于碰到一个了！
 早上看到这个题头疼的不行，看了半天没看出来啥，看答案都脑壳疼，现在再来看看~
 
