--- a/117. Populating Next Right Pointers in Each Node II.md
+++ b/117. Populating Next Right Pointers in Each Node II.md
@@ -35,7 +35,12 @@ Recursive approach is fine, implicit stack space does not count as extra space f
 
 这题是LC 116.的延伸，这里没有完全二叉树的条件。
 
+
+Recursion: <br>
 如果根节点有左子节点且有右子节点，那么左子节点的next节点即为右子节点。但是如果没有右子节点呢？那就要向上寻找了，查询根节点的next节点是否有左子节点，若是没有，则为其右节点；若还是没有，则继续寻找next节点的next节点…… 这就是一个递归啦！
+
+Iterative: <br>
+每次分别遍历根节点的左右子节点，记录当前节点，当走到下一个节点时，记录的节点的next节点即为当前节点。根节点的左右子节点遍历完成后，再进入根节点的next节点进行下一轮的更新。这时需要设置一个curr节点，用来记录每次节点的更新，同时设置一个dummy节点，记录每一个行的开始，用于指示下一行遍历的起点。
 
 
 
@@ -46,7 +51,7 @@ Recursive approach is fine, implicit stack space does not count as extra space f
 
 
 ## Code
-
+Recursion:
 ```java
 /*
 // Definition for a Node.
@@ -94,6 +99,32 @@ class Solution {
         if (root.left != null) return root.left;
         if (root.right != null) return root.right;
         return next(root.next);
+    }
+}
+```
+Iterative:
+```java
+class Solution {
+    public Node connect(Node root) {
+        if (root == null) return root;
+        Node head = root;
+        while (head != null) {
+            Node dummy = new Node();
+            Node curr = dummy;
+            while (head != null) {
+                if (head.left != null) {
+                    curr.next = head.left;
+                    curr = curr.next;
+                }
+                if (head.right != null) {
+                    curr.next = head.right;
+                    curr = curr.next;
+                }
+                head = head.next;
+            }
+            head = dummy.next;
+        }
+        return root;
     }
 }
 ```
