--- a/957. Prison Cells After N Days.md
+++ b/957. Prison Cells After N Days.md
@@ -51,11 +51,17 @@ N天以后的监狱
 
 > Related Topics: Hash Table
 
+这题让我们求根据题目所给的变化N天后数组的变化，看到第二例给的要求的N = 1000000000，就很容易可以想到这样的问题大概结果是循环出现的，肯定不会是需要我们真的去求这么多。
+
+这里可以创造一个HashMap，用来存储每次生成的新数组。由于题目中说边缘的没有邻居，因此在第一天及以后它们都恒为0，这样其他位置的值根据它们附近的两个点的值是否相同就可以得到了。每次生成完成后，检查该数组是否曾出现过，若出现过，则说明找到了其变化周期，因为重复数组之后的变化趋势势必和之前一致。按照该方法就可以简化结果了。
 
 
 
-### 
-> 
+### 易错点
+> 对N的化简
+
+最开始做的时候是使用了一个count变量用来记录当前循环的轮数，这样的计算会比较符合正常递增的思路。当其重复时，将当前的count减去重复数组对应的count。<br>
+但是之后发现这样是错的，因为循环判断的条件为 `count <= N`，当获得重复轮数时将N取余了，此时有可能直接将N化简到比count更小，这样循环就直接终止了。但此时并不是正确的结果数组。
 
 
 ## Code
