Tree, DFS, Kadane

--- a/124. Binary Tree Maximum Path Sum.md
+++ b/124. Binary Tree Maximum Path Sum.md
@@ -41,10 +41,18 @@ Output: 42
 > Related Questions: [LC53. Maximum Subarray](https://github.com/Zingg7/LeetCode/blob/master/53.%20Maximum%20Subarray.md) / 
 [LC121. Best Time to Buy and Sell Stock](https://github.com/Zingg7/LeetCode/blob/master/121.%20Best%20Time%20to%20Buy%20and%20Sell%20Stock.md) / [LC 152. Maximum Product Subarray](https://github.com/Zingg7/LeetCode/blob/master/152.%20Maximum%20Product%20Subarray.md)
 
+这一题实际上还是Kadane's Algorithm的变种，不得不说这个方法真的很天才，非常简单的解决了这类问题……
+    
+Kadane's Algorithm的题目通常关注的都是 `新的起点 与 过去的结果加上起点` 和 `当前最大值 与 全局最大值` 之间的关系。
 
+在这道题目里面，每走一层都需要判断当前层的左子树与右子树哪个更大。如果需要选择走这条路线，那么选择的那一条路线所包含的值必然是最大的。在这里我们使用了递归对层数进行依次的求解。（闪电侠说的很有道理，树的题目基本上都是递归的方法去求解）
 
-### 
-> 
+因此，每一层的结果都需要使用一个递归来进行求解，也就是max_now里的 `过去的结果加上起点` 是通过递归去求得的。那么 `新的起点` 是什么呢？在这里实际上就是不取该点，那么就是0了。
+
+对每一个分别子树的结果进行了求解后，就应当获得当前的最大值。什么样是最大值呢？在这里应该是将左右两个子树都走完，这样的值才是当前最大的。生成之后，再看是否可以更新全局的最大值。
+
+递归表达式所需要返回的，则是子树选择的较大值（也就是走左边这一棵子树还是右边），因为递归所求得的结果将会进入到后面的计算中。（当前最大值则是将所有可走的路都走完了，因此左右子树的结果都会被加上）。
+
 
 
 ## Code
