--- a/373. Find K Pairs with Smallest Sums.md
+++ b/373. Find K Pairs with Smallest Sums.md
@@ -35,12 +35,21 @@ Explanation: All possible pairs are returned from the sequence: [1,3],[2,3]
 
 > Related Topics: Heap
 
-方法1：<br>
-每次寻找当前全局最小值，通过对应关系进行剪枝（每次取左方元素，对应右方最小有可能解）
+方法1：<Br>
+以nums1为基准，每次寻找全局最小值。对于左边的每个数，不需要将右边的所有数相加进行对比，因为其必选择没被匹配过的最小数。<Br>
+因此创建一个index数组，记录左边的每个数使用了右边的第几个数，下次从下一位中选择即可。
 
-方法2：<br>
-使用PirorityQueue和新建Pair类，将放入的元素自动排序
+时间复杂度：O(k*n)
 
+方法2：<Br>
+创建一个PirorityQueue，将其中一行放入，每次取出PriorityQueue的头节点，并将另一行未放入的下一个节点放入。<Br>
+
+时间复杂度：O(nlogn)
+
+## 易错点
+> 方法1的index数组为左边数对右边的对应，数组的长度为基准数组的长度
+
+> 方法1需要注意循环中若index[i]大于了第二个数组的长度，需要continue
 
 ### 知识点
 > 创造带Comparator的类
